# voxel-engine

./: CMakeLists.txt  README.md  run.fish  voxel-engine
include/: camera.hpp  framework.hpp  global.hpp  mesh.hpp  shader.hpp  terrain.hpp
shader/: fragment_shader.glsl  vertex_shader.glsl
src/: camera.cpp  framework.cpp  main.cpp  shader.cpp  terrain.cpp
